intergrated chessboard.js (#3)

--- a/chess-frontend/chess-board.html
+++ b/chess-frontend/chess-board.html
@@ -3,14 +3,23 @@
     </html>
     <head> 
         <link rel="stylesheet" href="chess-board.css">
+        <link rel="stylesheet" href="css/chessboard-1.0.0.min.css">
     </head>
     <body>
-        <img src = "chessboard.png" class= "chessboard"> 
+        <div id="board1" style="width: 600px"></div>
         <div>
 
             <button class="button button1">clear</button>
             <button class="button button2">level 1 </button>
 
         </div>
+        <script
+            src="https://code.jquery.com/jquery-3.6.1.min.js"
+            integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+            crossorigin="anonymous"
+        ></script>
+        <script src="chess.js"></script>
+        <script src="js/chessboard-1.0.0.min.js"></script>
+        <script src="game.js"></script>
     </body>
 </html>
