chessboard configured for random moves with chess.js (#10)

--- a/static/chess-board.html
+++ b/static/chess-board.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='css/chessboard-1.0.0.min.css') }}">
     </head>
     <body>
-        <div id="board1" style="width: 600px"></div>
+        <div id="myBoard" style="width: 600px"></div>
         <div>
 
             <button class="button button1">clear</button>
