background and start button added

--- a/static/chess-board.html
+++ b/static/chess-board.html
@@ -9,9 +9,9 @@
         <div id="myBoard" style="width: 600px"></div>
         <div>
 
-            <button class="button button1">clear</button>
+            <button class="button button1" onclick="alert('Your war is about to start ') ">start game</button>
             <button class="button button2">level 1 </button>
-
+       
         </div>
         <script
             src="https://code.jquery.com/jquery-3.6.1.min.js"
